# DatabricksDABProjects

./: .flake8  .gitignore  README.md  codetest.py  dbutils.pyi
Tablemaint-DAB/: bundle.yml
Tablemaint-DAB/resources/: tablemaint_setup.yml  variables.yml
Tablemaint-DAB/src/: setupnotebook.ipynb  setupnotebook.py  table_maint.py
Tablemaint-DAB/src/common/: utils.py
etl_meta_transformation/: bundle.yml  conftest.py  pyproject.toml  pytest.ini
etl_meta_transformation/demo/: autoloader_example.ipynb  cleanup_notebook.ipynb  demo_notebook.ipynb  loaddemodata.ipynb  sqlload.txt
etl_meta_transformation/resources/: etl_meta_demopipeline.yml  etl_meta_setup.yml
etl_meta_transformation/src/: etl_meta_transformation.py  setupnotebook.ipynb  temp_file.py
etl_meta_transformation/src/common/: utils.py
etl_meta_transformation/src/etl_meta_transformation.egg-info/: PKG-INFO  SOURCES.txt
etl_meta_transformation/src/tests/unit/: test_unit.py
etl_meta_transformation/src/tests/unit/data/: test_sql_stmt.txt
etl_meta_transformation/tests/: test_cases.py  test_notebook.ipynb
etl_meta_transformation/tests/data/: test_sql_stmt.txt
etl_meta_transformation/tests/integration/: test_etl_meta_pipeline.py
